Fix horizontal scrollbar styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,7 @@ button:focus {
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
+    height: 8px;
     width: 8px;
 }
 
